Fixed logo and manual UI position
The logo was not floating left so the header text did not display in the
navbar (issue #80)

The manualUI block was too tall when running reftests.  This caused the
stop / pause buttons to be behind the dialog such that they could not be
selected without resizing the window (issue #78)

--- a/runner/runner.css
+++ b/runner/runner.css
@@ -90,7 +90,8 @@ html.done section + section {
 
 #manualUI {
     position: fixed;
-    top: 100px;
+    z-index: 2000;
+    top: -20px;
     left: 0;
     right: 0;
     display: block;
